--- a/analise-semantica-caiotheodoro/ErrorMessages.properties
+++ b/analise-semantica-caiotheodoro/ErrorMessages.properties
@@ -25,6 +25,10 @@ ERR-SEM-USE=Uso: python tppsema.py file.tpp
 ERR-SEM-NOT-TPP=Não é um arquivo .tpp.
 ERR-SEM-FILE-NOT-EXISTS=Arquivo .tpp não existe.
 ERR-SEM-MAIN-NOT-DECL=Função principal não declarada.
-WAR-SEM-VAR-DECL-NOT-USED=Variável {} declarada e não utilizada.
-
+WAR-SEM-VAR-DECL-NOT-USED=Variável declarada e não utilizada
+WAR-ATR-TIP-INCOMP=Tipos incompatíveis na atribuição.
+ERR-RET-TIP-INCOMP=Tipos incompatíveis no retorno.
+ERR-FUNC-NOT-DECL=Função  não declarada.
+ERR-PARAM-FUNC-INCOMP=Parâmetros incompatíveis na função.
+WAR-ALR-DECL=Variável  já declarada.
 ## Estou incluindo as outras chaves e erros semânticos.
