--- a/analise-semantica-caiotheodoro/ErrorMessages.properties
+++ b/analise-semantica-caiotheodoro/ErrorMessages.properties
@@ -31,4 +31,5 @@ ERR-RET-TIP-INCOMP=Tipos incompatíveis no retorno.
 ERR-FUNC-NOT-DECL=Função  não declarada.
 ERR-PARAM-FUNC-INCOMP=Parâmetros incompatíveis na função.
 WAR-ALR-DECL=Variável  já declarada.
+ERR-VAR-NOT-DECL=Variável não declarada.
 ## Estou incluindo as outras chaves e erros semânticos.
