--- a/analise-semantica-caiotheodoro/ErrorMessages.properties
+++ b/analise-semantica-caiotheodoro/ErrorMessages.properties
@@ -24,12 +24,14 @@ WAR-SYN-NOT-GEN-SYN-TREE=Aviso: Não foi possível gerar a Árvore Sintática.
 ERR-SEM-USE=Uso: python tppsema.py file.tpp
 ERR-SEM-NOT-TPP=Não é um arquivo .tpp.
 ERR-SEM-FILE-NOT-EXISTS=Arquivo .tpp não existe.
-ERR-SEM-MAIN-NOT-DECL=Função principal não declarada.
-WAR-SEM-VAR-DECL-NOT-USED=Variável declarada e não utilizada
+ERR-SEM-MAIN-NOT-DECL=Erro: Função principal não declarada.
+WAR-SEM-VAR-DECL-NOT-USED=Aviso: Variável `{}` declarada e não utilizada
+ERR-CHAMA-FUNC=Erro: Chamada a função {} que não foi declarada
 WAR-ATR-TIP-INCOMP=Tipos incompatíveis na atribuição.
-ERR-RET-TIP-INCOMP=Tipos incompatíveis no retorno.
+ERR-RET-TIP-INCOMP=Erro: Função principal deveria retornar {}, mas retorna vazio
 ERR-FUNC-NOT-DECL=Função  não declarada.
-ERR-PARAM-FUNC-INCOMP=Parâmetros incompatíveis na função.
-WAR-ALR-DECL=Variável  já declarada.
+ERR-PARAM-FUNC-INCOMP-MAIS=Erro: Chamada à função {} com número de parâmetros maior que o declarado
+ERR-PARAM-FUNC-INCOMP-MENOS=Erro: Chamada à função {} com número de parâmetros menor que o declarado
+WAR-ALR-DECL=Variável `{}` já declarada.
 ERR-VAR-NOT-DECL=Variável não declarada.
 ## Estou incluindo as outras chaves e erros semânticos.
