--- a/analise-semantica-caiotheodoro/ErrorMessages.properties
+++ b/analise-semantica-caiotheodoro/ErrorMessages.properties
@@ -27,11 +27,15 @@ ERR-SEM-FILE-NOT-EXISTS=Arquivo .tpp não existe.
 ERR-SEM-MAIN-NOT-DECL=Erro: Função principal não declarada.
 WAR-SEM-VAR-DECL-NOT-USED=Aviso: Variável `{}` declarada e não utilizada
 ERR-CHAMA-FUNC=Erro: Chamada a função {} que não foi declarada
-WAR-ATR-TIP-INCOMP=Tipos incompatíveis na atribuição.
+WAR-ATR-TIP-INCOMP=Aviso: Atribuição de tipos distintos {} {} e {} {}
 ERR-RET-TIP-INCOMP=Erro: Função principal deveria retornar {}, mas retorna vazio
-ERR-FUNC-NOT-DECL=Função  não declarada.
+ERR-FUNC-NOT-DECL=Função não declarada.
+ERR-VAR-NOT-DECL=Erro: Variável {} não declarada.
+ERR-IND-ARRAY=Erro: índice de array {} não inteiro
+WAR-REC-PRIN=Aviso: Chamada recursiva para principal.
+WAR-NOT-USED-FUNC=Aviso: Função {} declarada, mas não utilizada
+ERR-FUNC-TYPE-RETURN=Erro: Função {} do tipo {} retornando {}
+ERR-REC-PRIN=Erro: Chamada para a função principal não permitida.
 ERR-PARAM-FUNC-INCOMP-MAIS=Erro: Chamada à função {} com número de parâmetros maior que o declarado
 ERR-PARAM-FUNC-INCOMP-MENOS=Erro: Chamada à função {} com número de parâmetros menor que o declarado
 WAR-ALR-DECL=Variável `{}` já declarada.
-ERR-VAR-NOT-DECL=Variável não declarada.
-## Estou incluindo as outras chaves e erros semânticos.
