--- a/geracao-de-codigo-caiotheodoro-main/ErrorMessages.properties
+++ b/geracao-de-codigo-caiotheodoro-main/ErrorMessages.properties
@@ -38,6 +38,8 @@ ERR-FUNC-NOT-DECL=Função  não declarada.
 ERR-PARAM-FUNC-INCOMP=Parâmetros incompatíveis na função.
 WAR-ALR-DECL=Variável  já declarada.
 ERR-VAR-NOT-DECL=Variável não declarada.
+ERR-INV-TREE=Arvore invalida.
+ERR-FUNC-TYPE-RETURN=Tipo de retorno invalido.
 
 [GenCodeErrors]
 
